// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserPostsLeftSection Component should match snapshot when profile is mine 1`] = `
Array [
  <div>
    <div
      className="recomm"
    >
      <div
        className="recomm_top"
      >
        <span>
          Suggested
        </span>
        <a
          className="recomm_refresh"
          data-tip="refresh"
          href="#"
          onClick={[Function]}
        >
          <i
            className="fas fa-sync-alt"
          />
        </a>
        <a
          className="recomm_all"
          data-tip="view all"
          href="/explore"
          onClick={[Function]}
        >
          <i
            className="fas fa-chevron-right"
          />
        </a>
      </div>
      <div
        className="recomm_main"
        style={
          Object {
            "height": 100,
          }
        }
      >
        <div
          className="spinner"
        >
          <span />
          <span />
          <span />
        </div>
        <div
          className="cLoading"
        >
          <div
            className="recomms"
          >
            <img
              alt=""
              src="/users/7/avatar.jpg"
            />
            <div
              className="recomms_cont"
            >
              <a
                className="recomms_username"
                href="/profile/ghalib"
                onClick={[Function]}
              >
                ghalib
              </a>
              <span>
                1 mutual follower
              </span>
            </div>
            <div
              className="recomms_ff"
            >
              <a
                className="pri_btn follow"
                href="#"
                onClick={[Function]}
              >
                Follow
              </a>
            </div>
          </div>
          <div
            className="recomms"
          >
            <img
              alt=""
              src="/users/8/avatar.jpg"
            />
            <div
              className="recomms_cont"
            >
              <a
                className="recomms_username"
                href="/profile/coldplay"
                onClick={[Function]}
              >
                coldplay
              </a>
              <span>
                cold play
              </span>
            </div>
            <div
              className="recomms_ff"
            >
              <a
                className="pri_btn follow"
                href="#"
                onClick={[Function]}
              >
                Follow
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="__react_component_tooltip place-top type-dark "
      data-id="tooltip"
    >
      
    </div>
  </div>,
  <div>
    <div
      className="recomm user-hashtags"
    >
      <div
        className="recomm_top"
      >
        <span>
          Your recent hashtags
        </span>
      </div>
      <div
        className="recomm_main"
      >
        <a
          className="uh_link"
          href="/hashtag/travel"
          onClick={[Function]}
        >
          #travel
        </a>
        <a
          className="uh_link"
          href="/hashtag/cool"
          onClick={[Function]}
        >
          #cool
        </a>
        <a
          className="uh_link"
          href="/hashtag/hmm"
          onClick={[Function]}
        >
          #hmm
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`UserPostsLeftSection Component should match snapshot when profile is not mine 1`] = `
Array [
  <div>
    <div
      className="mutuals"
    >
      <div
        className="mutual_info"
      >
        <span>
          1 follower
           you might know
        </span>
        <a
          className="view_all_yk"
          data-tip="view all"
          href="/profile/ghalib/people-you-know"
          onClick={[Function]}
        >
          <i
            className="fas fa-chevron-right"
          />
        </a>
      </div>
      <div
        className="mutual_main"
      >
        <a
          className="mutual_links"
          data-tip="nobita"
          href="/profile/nobita"
          onClick={[Function]}
        >
          <img
            src="/users/11/avatar.jpg"
          />
        </a>
      </div>
      <div
        className="__react_component_tooltip place-top type-dark "
        data-id="tooltip"
      >
        
      </div>
    </div>
  </div>,
  <div>
    <div
      className="recomm"
    >
      <div
        className="recomm_top"
      >
        <span>
          Suggested
        </span>
        <a
          className="recomm_refresh"
          data-tip="refresh"
          href="#"
          onClick={[Function]}
        >
          <i
            className="fas fa-sync-alt"
          />
        </a>
        <a
          className="recomm_all"
          data-tip="view all"
          href="/explore"
          onClick={[Function]}
        >
          <i
            className="fas fa-chevron-right"
          />
        </a>
      </div>
      <div
        className="recomm_main"
        style={
          Object {
            "height": 100,
          }
        }
      >
        <div
          className="spinner"
        >
          <span />
          <span />
          <span />
        </div>
        <div
          className="cLoading"
        >
          <div
            className="recomms"
          >
            <img
              alt=""
              src="/users/7/avatar.jpg"
            />
            <div
              className="recomms_cont"
            >
              <a
                className="recomms_username"
                href="/profile/ghalib"
                onClick={[Function]}
              >
                ghalib
              </a>
              <span>
                1 mutual follower
              </span>
            </div>
            <div
              className="recomms_ff"
            >
              <a
                className="pri_btn follow"
                href="#"
                onClick={[Function]}
              >
                Follow
              </a>
            </div>
          </div>
          <div
            className="recomms"
          >
            <img
              alt=""
              src="/users/8/avatar.jpg"
            />
            <div
              className="recomms_cont"
            >
              <a
                className="recomms_username"
                href="/profile/coldplay"
                onClick={[Function]}
              >
                coldplay
              </a>
              <span>
                cold play
              </span>
            </div>
            <div
              className="recomms_ff"
            >
              <a
                className="pri_btn follow"
                href="#"
                onClick={[Function]}
              >
                Follow
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="__react_component_tooltip place-top type-dark "
      data-id="tooltip"
    >
      
    </div>
  </div>,
  <div>
    <div
      className="recomm user-hashtags"
    >
      <div
        className="recomm_top"
      >
        <span>
          Your recent hashtags
        </span>
      </div>
      <div
        className="recomm_main"
      >
        <a
          className="uh_link"
          href="/hashtag/travel"
          onClick={[Function]}
        >
          #travel
        </a>
        <a
          className="uh_link"
          href="/hashtag/cool"
          onClick={[Function]}
        >
          #cool
        </a>
        <a
          className="uh_link"
          href="/hashtag/hmm"
          onClick={[Function]}
        >
          #hmm
        </a>
      </div>
    </div>
  </div>,
  <div>
    <div
      className="recomm_teaser"
    >
      <span>
        Wanna recommend 
        ghalib
         to others or invite someone, so they can get to know about 
        ghalib
        .
      </span>
      <a
        className="sec_btn"
        href="#"
        onClick={[Function]}
      >
        Recommend
      </a>
    </div>
  </div>,
  <div>
    <div
      className="recomm_teaser"
    >
      <span>
        Wanna add 
        ghalib
         to your favourites list.
      </span>
      <a
        className="sec_btn"
        href="#"
        onClick={[Function]}
      >
        Add
      </a>
    </div>
  </div>,
  <div
    className="recomm_teaser"
  >
    <span>
      Wanna message 
      ghalib
      ? Create a private conversation with 
      ghalib
      .
    </span>
    <a
      className="sec_btn"
      href="#"
      onClick={[Function]}
    >
      Message
    </a>
  </div>,
]
`;
